# acelist

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: quick.yaml  release.yaml
src/acelist/: cli.py  editor.py  http.py  matcher.py  metadata.py  updater.py
