[project]
name = "acelist"
version = "0.1.0"
description = "Synchronizes an AceStream playlist with an XMLTV file"
authors = [
    { name = "Javier Alonso (Javinator9889)", email = "dev@javinator9889.com" }
]
dependencies = [
    "aiohttp>=3.11.13",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "m3u8>=6.0.0",
    "lxml>=5.3.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "GPL-3.0"

[project.scripts]
acelist = "acelist:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/acelist"]
